k8s/cowrie-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cowrie-service
spec:
  type: LoadBalancer
  selector:
    app: cowrie
  ports:
  - protocol: TCP
    port: 22
    targetPort: 2222
